crates/compiler/src/tests/e2e/bad/0013_duplicate_trait_impl/main.gom
trait Describable {
  fn describe(Self) -> string;
}

struct Tag {
  label: string,
}

impl Describable for Tag {
  fn describe(self: Tag) -> string {
    self.label
  }
}

impl Describable for Tag {
  fn describe(self: Tag) -> string {
    "Tag: " + self.label
  }
}

fn main() -> unit {
  ()
}
